<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_to_expire">About to expire</string>
    <string name="accept">Accept</string>
    <string name="accessibility_add_more_contacts">Invite contact</string>
    <string name="accessibility_addto">Add to</string>
    <string name="accessibility_annotation_overlay_info_cards_drawer_dismiss">Hide cards</string>
    <string name="accessibility_annotation_overlay_promo_dismiss">Close</string>
    <string name="accessibility_annotation_overlay_promo_expand">Expand</string>
    <string name="accessibility_back">Back</string>
    <string name="accessibility_channel_banner">Channel banner</string>
    <string name="accessibility_channel_banner_camera_icon">Update channel banner</string>
    <string name="accessibility_channel_settings_edit_description">Edit description</string>
    <string name="accessibility_channel_settings_edit_family_name">Edit family name</string>
    <string name="accessibility_channel_settings_edit_given_name">Edit given name</string>
    <string name="accessibility_channel_settings_edit_name">Edit channel name</string>
    <string name="accessibility_channel_subscribe_action">Subscribe to this channel</string>
    <string name="accessibility_channel_unsubscribe_action">Unsubscribe from this channel</string>
    <string name="accessibility_clear_search">Clear search</string>
    <string name="accessibility_close_dialog">Close dialog</string>
    <string name="accessibility_close_share_panel">Close share panel.</string>
    <string name="accessibility_closed_captions">Show closed captions menu</string>
    <string name="accessibility_collaborator_card">Collaborator</string>
    <string name="accessibility_collapse">Minimize</string>
    <string name="accessibility_connections_illustration">Illustration</string>
    <string name="accessibility_decrement_amount">Decrement amount</string>
    <string name="accessibility_describe_as_button">%1$s Button</string>
    <string name="accessibility_dislike_video">Dislike button</string>
    <string name="accessibility_dismiss">Dismiss</string>
    <string name="accessibility_dismiss_button">Remove suggested contact</string>
    <string name="accessibility_dismiss_chat_video">Dismiss video</string>
    <string name="accessibility_enter_fullscreen">Enter fullscreen</string>
    <string name="accessibility_enter_vr_mode">Enter virtual reality mode</string>
    <string name="accessibility_episode_card">Episode</string>
    <string name="accessibility_error_icon">Chat error</string>
    <string name="accessibility_exit_fullscreen">Exit fullscreen</string>
    <string name="accessibility_expand_live_chat">Expand Live Chat</string>
    <string name="accessibility_fast_forward">Fast forward</string>
    <string name="accessibility_flag">Flag video</string>
    <string name="accessibility_go_to_channel">Go to channel</string>
    <string name="accessibility_go_to_video">Go to video</string>
    <string name="accessibility_heart_icon">Heart Button</string>
    <string name="accessibility_hide_player_controls">Hide controls</string>
    <string name="accessibility_incept_button">Open video player</string>
    <string name="accessibility_increment_amount">Increment amount</string>
    <string name="accessibility_info_cards">Show Cards</string>
    <string name="accessibility_inline_play_button">Play video</string>
    <string name="accessibility_invite_more_participants">Add participants</string>
    <string name="accessibility_like_video">Like button</string>
    <string name="accessibility_menu">Menu</string>
    <string name="accessibility_miniplayer">Open mini player</string>
    <string name="accessibility_more_actions_video">More actions</string>
    <string name="accessibility_share_video">Share video</string>
    <string name="accessibility_watch_page">Open video player</string>
    <string name="mdx_pair_with_tv_prefs_title">Watch on TV</string>
    <string name="mdx_remote_queue_header_description">Tap to close queue</string>
    <string name="mdx_remote_queue_header_title">Queue</string>
    <string name="pref_about_category">About</string>
    <string name="pref_autonav_title">Autoplay</string>
    <string name="pref_background_buffering_enabled_summary">Keep buffering paused videos if you leave the app</string>
    <string name="pref_background_buffering_enabled_title">Buffering</string>
    <string name="pref_content_localization_summary">Change content shown to you based on country</string>
    <string name="pref_content_localization_title">Content location</string>
    <string name="pref_developer_api_request_logging_summary">Logs API requests and response summaries to logcat</string>
    <string name="pref_developer_api_request_logging_title">Log API calls</string>
    <string name="pref_developer_apiary_host_summary">%1$s selected</string>
    <string name="pref_developer_apiary_host_title">Apiary backend</string>
    <string name="pref_developer_category">Developer</string>
    <string name="pref_developer_debug_interaction_logging_summary">Logs Interaction Logging request summaries to logcat</string>
    <string name="pref_developer_debug_interaction_logging_title">Debug Interaction Logging</string>
    <string name="pref_developer_detour_header">Detour Header</string>
    <string name="pref_developer_full_api_response_logging_summary">Logs full API responses to logcat. This is very verbose</string>
    <string name="pref_developer_full_api_response_logging_title">Log full API responses</string>
    <string name="pref_developer_innertube_apiversion_summary">API version %1$s selected</string>
    <string name="pref_developer_innertube_apiversion_title">InnerTube API version</string>
    <string name="pref_developer_innertubez_title">InnerTubez</string>
    <string name="pref_developer_leak_detector_summary">Leaks memory monitor</string>
    <string name="pref_developer_leak_detector_title">Memory Leak Detection</string>
    <string name="pref_developer_mdx_host_summary">%1$s selected</string>
    <string name="pref_developer_mdx_host_title">MDX backend</string>
    <string name="pref_developer_memory_monitor_summary">Show a memory monitor in WatchWhileActivity</string>
    <string name="pref_developer_memory_monitor_title">Memory monitor</string>
    <string name="pref_developer_mobile_data_plan_api_client_ip">Mobile Dataplan API Client IP</string>
    <string name="pref_developer_mobile_data_plan_api_environment_summary">%1$s selected</string>
    <string name="pref_developer_mobile_data_plan_api_environment_title">Mobile Dataplan API Backend</string>
    <string name="pref_developer_offline_ad_summary">Show offline ads; edit ad playback counts, expiration, frequency cap</string>
    <string name="pref_developer_offline_ad_title">Offline Ads &amp; Frequency Cap</string>
    <string name="pref_developer_offline_browse_response_sync_summary">Resync the offline BrowseResponse.</string>
    <string name="pref_developer_offline_browse_response_sync_title">Sync offline BrowseResponse</string>
    <string name="pref_developer_offline_playlist_autosync_summary">Test offline playlist auto sync</string>
    <string name="pref_developer_offline_playlist_autosync_title">Playlist Autosync</string>
    <string name="pref_developer_offline_refresh_summary">Test offline refresh; view logs</string>
    <string name="pref_developer_offline_refresh_title">Offline Refresh</string>
    <string name="pref_developer_offline_time_window_summary">Test offline time window</string>
    <string name="pref_developer_offline_time_window_title">Offline Time Window</string>
    <string name="pref_developer_online_ads_summary">Show online ads preferences for controlling ads requests</string>
    <string name="pref_developer_online_ads_title">Online ads</string>
    <string name="pref_developer_ppg_host_title">PPG host name and port</string>
    <string name="pref_developer_sc_title">Spacecast Debugging</string>
    <string name="pref_developer_show_offline_http_queue_summary">Show all requests in the offline queue that will be sent when we return online</string>
    <string name="pref_developer_show_offline_http_queue_title">Show offline request queue</string>
    <string name="pref_general_category">General</string>
    <string name="pref_limit_mobile_data_usage_summary">Only stream HD video on Wi-Fi</string>
    <string name="pref_limit_mobile_data_usage_title">Limit mobile data usage</string>
    <string name="pref_nerd_stats_enabled">Enable stats for nerds</string>
    <string name="pref_privacy_category">Privacy</string>
    <string name="pref_safety_mode_summary">Restricted Mode hides videos that may contain inappropriate content flagged by users and other signals. No filter is 100% accurate, but it should help you avoid most inappropriate content.</string>
    <string name="pref_safety_mode_title">Restricted Mode</string>
    <string name="pref_subtitles_category">Captions</string>
    <string name="pref_upload_policy_summary">Specify network preferences for uploads</string>
    <string name="pref_upload_policy_title">Uploads</string>
    <string name="pref_upload_quality_summary">Specify video quality for uploads</string>
    <string name="pref_upload_quality_title">Upload Quality</string>
    <string name="pref_video_notifications_enabled_summary">Receive notifications</string>
    <string name="pref_video_notifications_enabled_title">Notifications</string>
    <string name="rename_conversation_dialog_header">Rename</string>
    <string name="rename_conversation_dialog_text">Conversation Name</string>
    <string name="rename_dialog_cancel">CANCEL</string>
    <string name="rename_dialog_ok">OK</string>
    <string name="upload_network_policy_pref_value_any">any</string>
</resources>