<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference android:title="@string/pref_developer_ppg_host_title" android:key="PPGHost" android:defaultValue="" />
    <EditTextPreference android:title="@string/pref_developer_innertubez_title" android:key="innertubez" android:defaultValue="" />
    <PreferenceScreen android:title="Logging">
        <SwitchPreference android:title="@string/pref_developer_api_request_logging_title" android:key="ApiRequestLogging" android:summary="@string/pref_developer_api_request_logging_summary" android:defaultValue="false" />
        <SwitchPreference android:title="@string/pref_developer_full_api_response_logging_title" android:key="FullApiResponseLogging" android:summary="@string/pref_developer_full_api_response_logging_summary" android:defaultValue="false" />
        <SwitchPreference android:title="@string/pref_developer_debug_interaction_logging_title" android:key="DebugInteractionLogging" android:summary="@string/pref_developer_debug_interaction_logging_summary" android:defaultValue="false" />
    </PreferenceScreen>
    <PreferenceScreen android:title="Offline">
        <Preference android:title="@string/pref_developer_show_offline_http_queue_title" android:key="ShowOfflineHttpQueue" android:summary="@string/pref_developer_show_offline_http_queue_summary" />
        <Preference android:title="@string/pref_developer_offline_refresh_title" android:key="OfflineRefresh" android:summary="@string/pref_developer_offline_refresh_summary" />
        <Preference android:title="@string/pref_developer_offline_playlist_autosync_title" android:key="OfflinePlaylistAutoSync" android:summary="@string/pref_developer_offline_playlist_autosync_summary" />
        <Preference android:title="@string/pref_developer_offline_time_window_title" android:key="OfflineTimeWindow" android:summary="@string/pref_developer_offline_time_window_summary" />
        <Preference android:title="@string/pref_developer_offline_browse_response_sync_title" android:key="OfflineBrowseResponseSync" android:summary="@string/pref_developer_offline_browse_response_sync_summary" />
    </PreferenceScreen>
    <PreferenceScreen android:title="Ads">
        <Preference android:title="@string/pref_developer_online_ads_title" android:key="OnlineAd" android:summary="@string/pref_developer_online_ads_summary" />
        <Preference android:title="@string/pref_developer_offline_ad_title" android:key="OfflineAd" android:summary="@string/pref_developer_offline_ad_summary" />
    </PreferenceScreen>
    <EditTextPreference android:title="@string/pref_developer_detour_header" android:key="net_detour_header" android:defaultValue="" />
    <SwitchPreference android:title="@string/pref_developer_leak_detector_title" android:key="leak_detector" android:summary="@string/pref_developer_leak_detector_summary" android:defaultValue="false" />
    <Preference android:title="@string/pref_developer_sc_title" android:key="SC" />
    <CheckBoxPreference android:title="@string/pref_developer_memory_monitor_title" android:key="memory_monitor" android:summary="@string/pref_developer_memory_monitor_summary" android:defaultValue="false" />
    <PreferenceScreen android:title="Mobile dataplan">
        <ListPreference android:title="@string/pref_developer_mobile_data_plan_api_environment_title" android:key="MobileDataPlanApiEnvironment" android:summary="@string/pref_developer_mobile_data_plan_api_environment_summary" android:defaultValue="0" />
        <EditTextPreference android:title="@string/pref_developer_mobile_data_plan_api_client_ip" android:key="MobileDataPlanApiClientIp" android:defaultValue="" />
    </PreferenceScreen>
</PreferenceScreen>