<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference android:title="@string/pref_limit_mobile_data_usage_title" android:key="limit_mobile_data_usage" android:summary="@string/pref_limit_mobile_data_usage_summary" />
    <SwitchPreference android:title="@string/pref_background_buffering_enabled_title" android:key="com.google.android.libraries.youtube.player.pref.pause_and_buffer_continue_after_suspend" android:summary="@string/pref_background_buffering_enabled_summary" android:defaultValue="true" />
    <SwitchPreference android:title="@string/pref_autonav_title" android:key="autonav_settings_activity_key" />
    <ListPreference android:entries="@array/upload_policy_entries" android:title="@string/pref_upload_policy_title" android:key="upload_policy" android:summary="@string/pref_upload_policy_summary" android:defaultValue="@string/upload_network_policy_pref_value_any" android:entryValues="@array/upload_policy_values" />
    <ListPreference android:entries="@array/upload_quality_entries" android:title="@string/pref_upload_quality_title" android:key="com.google.android.libraries.youtube.upload.pref.upload_quality" android:summary="@string/pref_upload_quality_summary" android:entryValues="@array/upload_quality_values" />
    <ListPreference android:enabled="false" android:title="@string/pref_content_localization_title" android:key="country" android:summary="@string/pref_content_localization_summary" />
    <SwitchPreference android:title="@string/pref_video_notifications_enabled_title" android:key="video_notifications_enabled" android:summary="@string/pref_video_notifications_enabled_summary" android:defaultValue="true" />
    <SwitchPreference android:title="@string/pref_safety_mode_title" android:key="innertube_safety_mode_enabled" android:summary="@string/pref_safety_mode_summary" />
    <SwitchPreference android:persistent="false" android:enabled="false" android:title="@string/pref_safety_mode_title" android:key="innertube_managed_restricted_mode" />
    <SwitchPreference android:title="@string/pref_nerd_stats_enabled" android:key="nerd_stats_enabled" android:defaultValue="false" />
</PreferenceScreen>