<?xml version="1.0" encoding="utf-8"?>
<preference-headers
  xmlns:android="http://schemas.android.com/apk/res/android">
    <header android:id="@id/yt_unlimited_pre_purchase_pref_header" />
    <header android:title="@string/pref_general_category" android:fragment="com.google.android.apps.youtube.app.settings.GeneralPrefsFragment" />
    <header android:id="@id/yt_unlimited_post_purchase_pref_header" />
    <header android:id="@id/offline_pref_header" android:fragment="com.google.android.apps.youtube.app.settings.OfflinePrefsFragment" />
    <header android:id="@id/pair_with_tv_header" android:title="@string/mdx_pair_with_tv_prefs_title" android:fragment="com.google.android.apps.youtube.app.settings.SendToTvPrefsFragment" />
    <header android:id="@id/mdx_smart_pairing_header" android:title="@string/mdx_pair_with_tv_prefs_title" />
    <header android:title="@string/pref_privacy_category" android:fragment="com.google.android.apps.youtube.app.settings.PrivacyPrefsFragment" />
    <header android:fragment="com.google.android.apps.youtube.app.settings.NotificationPrefsFragment" />
    <header android:id="@id/subtitles_legacy_header" android:title="@string/pref_subtitles_category" android:fragment="com.google.android.apps.youtube.app.settings.SubtitlesLegacyPrefsFragment" />
    <header android:id="@id/subtitles_system_header" android:title="@string/pref_subtitles_category" />
    <header android:fragment="com.google.android.apps.youtube.app.settings.DogfoodPrefsFragment" />
    <header android:title="@string/pref_developer_category" android:fragment="com.google.android.apps.youtube.app.settings.DeveloperPrefsFragment" />
    <header android:title="@string/pref_about_category" android:fragment="com.google.android.apps.youtube.app.settings.AboutPrefsFragment" />
</preference-headers>