<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference android:key="media_network_activation_type" android:defaultValue="0" />
    <PreferenceScreen android:title="Backend settings">
        <ListPreference android:title="@string/pref_developer_apiary_host_title" android:key="ApiaryHostSelection" android:summary="@string/pref_developer_apiary_host_summary" android:defaultValue="0" />
        <ListPreference android:title="@string/pref_developer_innertube_apiversion_title" android:key="InnerTubeApiSelection" android:summary="@string/pref_developer_innertube_apiversion_summary" android:defaultValue="0" />
        <ListPreference android:title="@string/pref_developer_mdx_host_title" android:key="MdxServerSelection" android:summary="@string/pref_developer_mdx_host_summary" android:defaultValue="0" />
    </PreferenceScreen>
    <EditTextPreference android:digits="0123456789, " android:key="experiment_ids" android:defaultValue="" android:inputType="number" />
    <Preference android:key="experiments_token" />
    <EditTextPreference android:digits="0123456789." android:key="innertube_override_version" android:defaultValue="" />
    <EditTextPreference android:key="innertube_promo_id" android:defaultValue="" android:inputType="textNoSuggestions" />
    <Preference android:key="clear_visitor_id" />
    <Preference android:key="copy_visitor_id" />
    <ListPreference android:enabled="false" android:key="internal_geo" />
    <Preference android:key="refresh_innertube_config" />
    <PreferenceScreen android:title="Uploads">
        <SwitchPreference android:key="com.google.android.libraries.youtube.upload.pref.force_enable_cronet" android:defaultValue="false" />
        <SwitchPreference android:key="com.google.android.libraries.youtube.upload.pref.force_enable_cronet_async" android:defaultValue="false" />
        <SwitchPreference android:key="com.google.android.libraries.youtube.upload.pref.force_enable_cronet_quic" android:defaultValue="false" />
        <SwitchPreference android:key="enable_upload_video_editing" android:defaultValue="false" />
        <SwitchPreference android:key="enable_upload_audio_swap" android:defaultValue="false" />
        <SwitchPreference android:key="enable_upload_filters" android:defaultValue="false" />
        <ListPreference android:key="camera_recorder_type" android:defaultValue="0" />
        <ListPreference android:key="camera_audio_source" android:defaultValue="0" />
    </PreferenceScreen>
    <SwitchPreference android:key="bypass_rate_limit" android:defaultValue="false" />
    <SwitchPreference android:key="enable_glide_image_manager" android:defaultValue="false" />
    <SwitchPreference android:key="enable_swatch" android:defaultValue="false" />
    <SwitchPreference android:key="enable_double_tap_to_seek" android:defaultValue="false" />
</PreferenceScreen>