<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@android:color/white" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" _xmlns:android="http://schemas.android.com/apk/res/android" _xmlns:yt="http://schemas.android.com/apk/res-auto" xmlns:_xmlns="xmlns"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textSize="@dimen/huge_font_size" android:textColor="@color/share_panel_normal_text_color" android:id="@id/dialog_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/rename_conversation_dialog_header" res-auto:robotoFont="regular" xmlns:res-auto="http://schemas.android.com/apk/res-auto" />
    <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textSize="@dimen/medium_font_size" android:textColor="@color/share_panel_normal_text_color" android:id="@id/dialog_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/rename_conversation_dialog_text" res-auto:robotoFont="regular" xmlns:res-auto="http://schemas.android.com/apk/res-auto" />
    <EditText android:id="@id/conversation_name" android:background="@android:drawable/editbox_background_normal" android:layout_width="250.0dip" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:maxLength="@integer/max_conversation_name_length" />
    <View android:id="@id/video_divider" android:background="@color/share_panel_action_button_enabled_color" android:layout_width="fill_parent" android:layout_height="2.0dip" android:layout_marginTop="8.0dip" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip">
        <View android:layout_width="wrap_content" android:layout_height="1.0dip" android:layout_weight="1.0" />
        <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textSize="20.0sp" android:textColor="@color/share_panel_normal_text_color" android:id="@id/cancel" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="25.0dip" android:text="@string/rename_dialog_cancel" res-auto:robotoFont="regular" xmlns:res-auto="http://schemas.android.com/apk/res-auto" />
        <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textSize="20.0sp" android:textColor="@color/share_panel_action_button_enabled_color" android:id="@id/ok" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="22.0dip" android:text="@string/rename_dialog_ok" res-auto:robotoFont="regular" xmlns:res-auto="http://schemas.android.com/apk/res-auto" />
    </LinearLayout>
</LinearLayout>