<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:paddingLeft="16.0dip" android:paddingTop="13.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" _xmlns:android="http://schemas.android.com/apk/res/android" _xmlns:yt="http://schemas.android.com/apk/res-auto" _xmlns:tools="http://schemas.android.com/tools" xmlns:_xmlns="xmlns"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.libraries.youtube.common.ui.CircularImageView android:id="@id/channel_thumbnail" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginRight="16.0dip" android:scaleType="centerCrop" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:contentDescription="@string/accessibility_go_to_channel" />
    <ImageView android:id="@id/incept" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_incept" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:contentDescription="@string/accessibility_watch_page" />
    <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textSize="@dimen/medium_font_size" android:textStyle="normal" android:textColor="@color/video_item_title_font" android:ellipsize="end" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="3" android:includeFontPadding="false" android:layout_toLeftOf="@id/incept" android:layout_toRightOf="@id/channel_thumbnail" android:layout_alignParentTop="true" res-auto:robotoFont="regular" xmlns:res-auto="http://schemas.android.com/apk/res-auto" />
    <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textSize="@dimen/small_font_size" android:textStyle="normal" android:textColor="@color/video_item_description_font" android:ellipsize="end" android:id="@id/description" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="2" android:includeFontPadding="false" android:layout_toLeftOf="@id/incept" android:layout_toRightOf="@id/channel_thumbnail" android:layout_below="@id/title" res-auto:robotoFont="regular" xmlns:res-auto="http://schemas.android.com/apk/res-auto" />
    <include android:id="@id/ad_attribution" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:layout_marginRight="6.0dip" android:layout_toRightOf="@id/channel_thumbnail" android:layout_below="@id/description" android:layout_alignWithParentIfMissing="true" layout="@layout/ad_badge_small" />
    <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textSize="@dimen/small_font_size" android:textStyle="normal" android:textColor="@color/video_item_uploader_font" android:ellipsize="end" android:id="@id/author" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:maxLines="2" android:includeFontPadding="false" android:layout_toRightOf="@id/ad_attribution" android:layout_below="@id/description" android:layout_alignParentRight="true" res-auto:robotoFont="regular" xmlns:res-auto="http://schemas.android.com/apk/res-auto" />
    <ImageView android:id="@id/like_button" android:background="?selectableItemBackgroundBorderless" android:paddingTop="16.0dip" android:paddingRight="16.0dip" android:paddingBottom="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/inline_like_drawable" android:layout_toRightOf="@id/channel_thumbnail" android:layout_below="@id/author" android:contentDescription="@null" />
    <com.google.android.apps.youtube.app.ui.TintableImageView android:id="@id/share_button" android:background="?selectableItemBackgroundBorderless" android:padding="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_share_mtrl_alpha" android:layout_toRightOf="@id/like_button" android:layout_below="@id/author" android:contentDescription="@string/accessibility_share_video" />
    <ImageView android:id="@id/more_actions_button" android:background="?selectableItemBackgroundBorderless" android:paddingLeft="16.0dip" android:paddingTop="16.0dip" android:paddingRight="16.0dip" android:paddingBottom="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_more_actions" android:layout_toRightOf="@id/share_button" android:layout_below="@id/author" android:contentDescription="@string/accessibility_more_actions_video" />
    <ImageView android:id="@id/miniplayer_button" android:background="?selectableItemBackgroundBorderless" android:paddingLeft="16.0dip" android:paddingTop="16.0dip" android:paddingRight="16.0dip" android:paddingBottom="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/quantum_ic_picture_in_picture_alt_grey600_24" android:layout_below="@id/author" android:layout_alignParentRight="true" android:contentDescription="@string/accessibility_miniplayer" />
</RelativeLayout>