<?xml version="1.0" encoding="utf-8"?>
<GridLayout android:id="@id/mdx_remote_queue_header" android:background="?backgroundTertiaryInverse" android:layout_width="fill_parent" android:layout_height="wrap_content" _xmlns:android="http://schemas.android.com/apk/res/android" _xmlns:yt="http://schemas.android.com/apk/res-auto" xmlns:_xmlns="xmlns"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_gravity="start|center" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/quantum_ic_keyboard_arrow_down_white_24" android:scaleType="center" android:layout_column="0" android:contentDescription="@string/mdx_remote_queue_header_description" android:layout_row="0" android:layout_rowSpan="2" />
    <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textAppearance="?textAppearanceTitleInverse" android:ellipsize="end" android:layout_gravity="bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:layout_marginRight="8.0dip" android:layout_column="1" android:text="@string/mdx_remote_queue_header_title" android:maxLines="1" android:singleLine="@bool/rtl_single_line_true" android:includeFontPadding="false" android:layout_row="0" res-auto:robotoFont="regular" xmlns:res-auto="http://schemas.android.com/apk/res-auto" />
    <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textAppearance="?textAppearanceBody1Inverse" android:textColor="?android:textColorSecondaryInverse" android:ellipsize="end" android:layout_gravity="top" android:id="@id/mdx_remote_queue_header_video_count" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="8.0dip" android:layout_column="1" android:maxLines="1" android:singleLine="@bool/rtl_single_line_true" android:includeFontPadding="false" android:layout_row="1" res-auto:robotoFont="regular" xmlns:res-auto="http://schemas.android.com/apk/res-auto" />
    <LinearLayout android:layout_gravity="end|center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_column="2" android:layout_row="0" android:layout_rowSpan="2">
        <include android:layout_width="48.0dip" android:layout_height="48.0dip" layout="@layout/mdx_remote_queue_media_route_button" />
        <ImageView android:id="@id/mdx_remote_queue_header_contextual_menu_anchor" android:background="?selectableItemBackground" android:paddingLeft="8.0dip" android:visibility="gone" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/ic_setbar_overflow" android:scaleType="center" android:contentDescription="@string/accessibility_menu" />
    </LinearLayout>
</GridLayout>